--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
-  "homepage": "https://rachelgutman.github.io/SupermarketReact/",
+  "homepage": "https://rachelgutman.github.io/SupermarketReact",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
